--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -127,16 +127,14 @@ set(msg_file_names
 
 	targ_heli.msg
 	heli_followtarg.msg
+#UI_STRIVE
 	vision_sensor.msg
-
-
 	ui_strive_formation_to_gcs.msg
 	ui_strive_gcs_to_formation.msg
 	ui_strive_gcs_to_formation_int32.msg
 	ui_strive_formation.msg
 	ui_strive_formation_int32.msg
-	ui_strive_formation_status.msg
-
+#END UI_STRIVE
         follow_to_commander.msg
 	)
 
